--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sequelize": "^5.21.2"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
