--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
+    "start": "nodemon src/index.js",
     "lint": "eslint src"
   },
   "repository": {
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/robbie-hinman/groshreez-api#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
@@ -29,6 +31,8 @@
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.4",
     "prettier": "^1.19.1"
   }
 }
