--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "groshreez-api",
   "version": "1.0.0",
-  "description": "Backend for groshreez react app",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/index.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "dbshell": "sqlite3 database.sqlite"
   },
   "repository": {
     "type": "git",
@@ -22,9 +23,8 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "pg": "^7.11.0",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
@@ -34,5 +34,6 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "prettier": "^1.19.1"
-  }
+  },
+  "keywords": []
 }
