--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.3.0",
+    "graphql-iso-date": "^3.6.1",
     "sequelize": "^5.21.2",
     "sqlite3": "^5.0.0"
   },
