--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/robbie-hinman/groshreez-api#readme",
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
